--- a/index.html
+++ b/index.html
@@ -43,15 +43,22 @@ Only 600 Whitelisted users will secure a place in the token sale. Here is the li
 
 <!-- <div class="alert alert-info navbar-fixed-top" role="alert ">Our early investor round is closed and pre-sales will start on 27th December on the Pinksale. 
 Only 600 Whitelisted users will secure a place in the token sale. Here is the link to get a whitelist.</div> -->
-<div class="alert alert-info alert-dismissible" role="alert" style="margin-bottom: 0px;">
+<!-- <div class="alert alert-info alert-dismissible" role="alert" style="margin-bottom: 0px;">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
   Our early investor round is closed and pre-sales will start on 27th December on the Pinksale. 
 Only 600 Whitelisted users will secure a place in the token sale. Here is the link to get a whitelist.
-</div>
+</div> -->
+
 
 
 	<header>
-	<nav id="myTopnav" class="navbar navbar-inverse" > <!--style="margin-top: 3%;" navbar-fixed-top -->
+	<nav id="myTopnav" class="navbar navbar-inverse navbar-fixed-top" > 
+		<!--style="margin-top: 3%;" navbar-fixed-top -->
+		<div class="alert alert-info alert-dismissible" role="alert" style="margin-bottom: 0px;">
+  <button id="alertbutton" type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  Our early investor round is closed and pre-sales will start on 27th December on the Pinksale. 
+Only 600 Whitelisted users will secure a place in the token sale. Here is the link to get a whitelist.
+</div>
 	  <div class="container-fluid">
 	    <div class="navbar-header">
 	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -99,9 +106,9 @@ Only 600 Whitelisted users will secure a place in the token sale. Here is the li
 					<div class="wel-btn col-lg-4 col-md-4 col-sm-12">	
 						<a href=""><img src="images/PancackeSwap1.png" class="pcs"></a>
 					</div>
-					<div class="wel-btn col-lg-4 col-md-4 col-sm-12">	
+					<!-- <div class="wel-btn col-lg-4 col-md-4 col-sm-12">	
 						<a href=""><img src="images/okex.png"></a>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		   </div>
@@ -633,6 +640,11 @@ We do not accept any liability for any loss or damage whatsoever caused in relia
 	  }
 	}
 
+
+	// function alfun() {
+	// 	document.getElementById("sec-1").style.padding-top = 0%;
+	// 	// alert(1);
+	// }
 
 
 	function btn_clickcopy() {
