--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Only 600 Whitelisted users will secure a place in the token sale. Here is the li
 		<div class="alert alert-info alert-dismissible" role="alert" style="margin-bottom: 0px;">
   <button id="alertbutton" type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
   Our early investor round is closed and pre-sales will start on 27th December on the Pinksale. 
-Only 600 Whitelisted users will secure a place in the token sale. Here is the link to get a whitelist.
+Only 600 Whitelisted users will secure a place in the token sale. Here is the <a href=""> link</a> to get a whitelist.
 </div>
 	  <div class="container-fluid">
 	    <div class="navbar-header">
